autoload binary commits

--- a/src/main/resources/gds.properties
+++ b/src/main/resources/gds.properties
@@ -1,5 +1,6 @@
 deviceType =FASTFARE
-gds.deviceType =GDS Lite
+#GDS Lite
+gds.deviceType =CLOUDLINK
 #RiderShip Details
 fareset =1
 RouteId =1
@@ -56,8 +57,8 @@ cdta.staging.username =coocoo
 cdta.staging.password =ZBWj6r4VXhYfLuwe
 
 # GDS Lite Device
-cdta.staging.gds.username =GDS lite1
-cdta.staging.gds.password =99074159-f32c-4413-89e6-d5ab8e7821fc
+cdta.staging.gds.username =GDS Lite2
+cdta.staging.gds.password =9167c16e-9ef1-42d7-9d56-a67a3d969caa
 
 cdta.qe.fbxno =002220
 cdta.qe.pwd =02cbb638-8026-46e4-bbf8-5ea94820f897
